Add umami site tracker support

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 NUXT_PUBLIC_ENFORCE_API=false
 NUXT_PUBLIC_API_URL=
 
+NUXT_PUBLIC_UMAMI_ID=
+NUXT_PUBLIC_UMAMI_URL=https://localhost:3030
+
 NUXT_PUBLIC_DATA_AVATAR_URL=https://images.pexels.com/photos/837358/pexels-photo-837358.jpeg
 NUXT_PUBLIC_DATA_FULLNAME=John Doe
 NUXT_PUBLIC_DATA_NICKNAME=John
