--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxt/kit": "npm:@nuxt/kit-edge@3.0.0-rc.3-27581242.8831e4a",
     "@nuxtjs/color-mode": "^3.0.2",
     "@nuxtjs/tailwindcss": "^5.0.4",
     "nuxt": "3.0.0-rc.2"
