--- a/package.json
+++ b/package.json
@@ -4,18 +4,29 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "format": "prettier --write \"{assets,components,composables,utils}/**/*.{js,ts,vue}\"",
+    "check:format": "prettier --check \"{assets,components,composables,utils}/**/*.{js,ts,vue}\"",
+    "check:type": "tsc --noEmit"
   },
   "devDependencies": {
     "@nuxt/kit": "npm:@nuxt/kit-edge@3.0.0-rc.8-27673249.1b2304b",
     "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/tailwindcss": "^5.3.2",
-    "nuxt": "3.0.0-rc.8"
+    "nuxt": "3.0.0-rc.8",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.0",
     "@vueuse/motion": "^2.0.0-beta.18",
     "pinia": "^2.0.18"
+  },
+  "prettier": {
+    "endOfLine": "lf",
+    "arrowParens": "always",
+    "bracketSpacing": true,
+    "printWidth": 120,
+    "singleQuote": true
   }
 }
-
