feat: added project section

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NUXT_PUBLIC_ENFORCE_API=false
 NUXT_PUBLIC_API_URL=
+NUXT_PUBLIC_API_GITHUB_URL=https://api.github.com/users/{username}/repos
+NUXT_PUBLIC_GITHUB_IMG_IMG=https://opengraph.githubassets.com/{hash}/{username}
 
 NUXT_PUBLIC_UMAMI_ID=
 NUXT_PUBLIC_UMAMI_URL=https://localhost:3030
